  * debian/patches/localedata/locale-C.diff: update comment about the week
    entry.  Closes: #829093.
  * debian/testsuite-xfail-debian.mk: allow malloc/tst-mallocfork2 to fail
    on hurd-i386, this is not a regression but a new test.
  * debian/patches/sparc/cvs-sparc-nearbyint.diff: new patch from upstream
    to fix nearbyint* functions with a sNaN input on SPARC.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 01 Jul 2016 00:17:12 +0200

glibc (2.23-0experimental4) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * debian/rules.d/build.mk: allow a test to fail without having a .out
    file.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6075 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jun 2016 12:25:44 +0200

glibc (2.23-0experimental3) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/hurd-i386/tg-hurdsig-fixes-2.diff: refresh.
    - debian/patches/hurd-i386/cvs-libpthread.so.diff: drop, upstreamed.
    - debian/patches/mips/submitted-vfork.diff: drop, upstreamed.
    - debian/patches/sparc/submitted-vfork.diff: drop, upstreamed.
  * debian/rules.d/build.mk: reduce TIMEOUTFACTOR to 15 from 50. That
    corresponds to a 5 minutes default, which should be more than enough even
    on slow architectures.
  * debian/sysdeps/mips64el.mk: change the ISA back to MIPS3 to fix math FMA
    tests on some CPUs.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 28 Jun 2016 00:48:51 +0200

glibc (2.23-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * patches/kfreebsd/local-fbtl.diff: update to revision 5973 (from
    glibc-bsd).
  * debian/rules, debian/rules.d/build.mk: rename localedir into complocaledir
    following upstream change.