@@ -10,6 +10,10 @@ glibc (2.23-1) UNRELEASED; urgency=medium
   * debian/patches/sparc/cvs-sparc-nearbyint.diff: new patch from upstream
     to fix nearbyint* functions with a sNaN input on SPARC.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-poll_errors_fixes.diff: Update from tg branch, fixes
+    gettimeofday call from select.
+
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 01 Jul 2016 00:17:12 +0200
 
 glibc (2.23-0experimental4) experimental; urgency=medium
